2009-04-20  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATxmega64D3.
	* devtools/gen-avr-lib-tree.sh: Same.
	* include/avr/Makefile.am: Same.
	* include/avr/io.h: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/power.h: Same.
	* include/avr/sleep.h: Same.
	* include/avr/wdt.h: Same.
	* include/avr/iox64d3.h: New file.
	* NEWS: Add news item.

2009-04-19  Eric B. Weddington  <eric.weddington@atmel.com>

	* devtools/gen-avr-lib-tree.sh: Use -fno-jump-tables to compile
	libraries for large memory devices.

2009-04-09  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATxmega128D3 and ATxmega256D3.
	* devtools/gen-avr-lib-tree.sh: Same.
	* include/avr/Makefile.am: Same.
	* include/avr/io.h: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/power.h: Same.
	* include/avr/sleep.h: Same.
	* include/avr/wdt.h: Same.
	* include/avr/iox128d3.h: New file.
	* include/avr/iox256d3.h: New file.
	* NEWS: Add news items.

2009-04-09  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for SF bug #2738926.
	* include/avr/eeprom.h: Add __EEGET, __EEPUT for IAR compatibility.
	* NEWS: Add item to fixed bug list.

2009-04-01  Eric B. Weddington  <eric.weddington@atmel.com>

	* xml/avrgcc-header: Add generation of hardware pin definitions for
	non-xmega devices.

2009-04-01  Eric B. Weddington  <eric.weddington@atmel.com>

	Put all functions in .text.avr-libc section, floating point math
	routines in .text.avr-libc.fplib section.
	* common/sectionname.h: New file.
	* common/asmdef.h: Fix spelling in comments. Change default linker
	section.
	* common/gasava.inc: Comment out macro that is no longer being used.
	* common/macros.inc: Add include file.
	* devtools/gen-avr-lib-tree.sh: Remove use of -mcall-prologues on 2
	xmega devices.
	* libc/misc/eerd_block.c: Change linker section.
	* libc/misc/eerd_dword.c: Same.